fixed the issue with the project image not showing fully

--- a/pages/portfolio/styles.css
+++ b/pages/portfolio/styles.css
@@ -89,7 +89,7 @@
     height: 100%;
     filter: grayscale(100%);
     overflow: hidden;
-    clip-path: polygon(0 0, 80% 0, 100% 100%, 20% 100%);
+    clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
   }
   .brand-img-2:hover
   {
@@ -110,6 +110,6 @@
     padding-right: 60px;
     padding-left: 60px;
     font-family: 'F2';
-    font-size: 16px;
+    font-size: 14px;
     line-height: 19px;
   }
